--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SchoolMe</string>
+    <string name="user_profile" />
+    <string name="homescreen">homescreen</string>
+    <string name="favorites">favorites</string>
 </resources>
