--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,24 @@
     <string name="stack_empty">No more Schools!</string>
     <string name="github">View on GitHub</string>
     <string name="students">Students</string>
+    <string name="henry_street_school">https://lh3.googleusercontent.com/-KyPAUxRDc6o/Tw3bV_WlnSI/AAAAAAAAWg0/wt2iWU0yFscF_I_yo1Xg1SFPMaowWUpogCHM/s540/DSC_0008.JPG</string>
+    <string name="university_neighborhood_hs">https://lh3.googleusercontent.com/-p8HAoGfe0YA/T3Ikv2FzsMI/AAAAAAAAgsg/MoFFtwgnotQ-jp-A3WbnpQP_mXHWXcMOQCHM/s540/DSC_0028.JPG</string>
+    <string name="east_side_community_school">https://lh3.googleusercontent.com/-kAZqObmM1Iw/T_EkbgylrBI/AAAAAAAAuNw/A6yBJyP0LuA_TWgh-MUe4nGoR8D6SPfEACHM/s540/IMG_4202.JPG</string>
+    <string name="marta_valle_hs">https://i.ytimg.com/vi/qcW5cY5FxQk/maxresdefault.jpg</string>
+    <string name="new_explorations_into_science">http://schools.nyc.gov/NR/rdonlyres/00E90A5C-EA6E-4F69-99C5-9BF363252827/19789/group3.JPG</string>
+    <string name="bard_hs_early_college">https://lh3.googleusercontent.com/-wHqKbqfo7KU/TctEYnR6THI/AAAAAAAACYU/O798rj8993ACSdKwgOyUwRo3dkvVOAxpwCHM/s540/IMG_0319.JPG</string>
+    <string name="the_american_sign_language">https://i.ytimg.com/vi/W6NxVZjmayc/maxresdefault.jpg</string>
+    <string name="urban_assembly_school_emergency">https://i.ytimg.com/vi/RjNXz3GnBdg/maxresdefault.jpg</string>
+    <string name="unity_center_for_urban_tech">https://i.ytimg.com/vi/GdtvQT70Kqo/maxresdefault.jpg</string>
+    <string name="stephen_t_mather">https://lh3.googleusercontent.com/-Mig8A_nEnto/VVOW1cRDPgI/AAAAAAABLSo/NbNIrMEhkdk36bJGyrkKavKhw4g9p35BQCHM/s540/DSCF8041.jpg</string>
+    <string name="clinton_school_writers">https://lh3.googleusercontent.com/-H18w66cyYL8/VhK9J-TpekI/AAAAAAABXq4/3qBbMa62u4A-T__C_G_TXxePln11-UmGACHM/s540/DSCF0216.jpg</string>
+    <string name="manhattan_early_college">https://lh3.googleusercontent.com/-m9ZNZlOaaAc/VRwI_i9HD6I/AAAAAAABGJw/U2_sL7L2FCM1H4czdoEINImpMZethg_kwCHM/s540/DSCF7755.jpg</string>
+    <string name="urban_assembly_maker_academy">https://i.ytimg.com/vi/2xVh_vVKCrM/maxresdefault.jpg</string>
+    <string name="food_and_finance">http://cms.quallsbenson.com/uploads/dsc_0012.jpg</string>
+    <string name="essex_street_academy">https://lh3.googleusercontent.com/-sLN0IcZ0y-E/TrrmsFqIMII/AAAAAAAAPx0/dad1ns8_LakrB5K02VE0eQ1PMniwyXzvgCHM/s540/IMG_1356.JPG</string>
+    <string name="hs_of_hospitality_management">https://lh3.googleusercontent.com/-NTNZvmaW_8M/T895zCu12QI/AAAAAAAAswI/ovMaceZJP_It2WhmP_G6flwd_TfcxpSMQCHM/s540/DSC_0100.JPG</string>
+    <string name="pace_hs">http://schools.nyc.gov/NR/rdonlyres/D16BB8DC-10F5-4F00-95A2-E32C937ADBC4/28372/school1.JPG</string>
+    <string name="urban_assembly_school_design">https://i.ytimg.com/vi/WWbJKKTnqag/maxresdefault.jpg</string>
+    <string name="facing_history_school">https://lh3.googleusercontent.com/-nVzfDY_OKzo/T8UAvxQ1NqI/AAAAAAAArVI/j3O31npnaow2s5GsKRWC8_J1ptny6WhowCHM/s540/DSC_0086.JPG</string>
+    <string name="urban_assembly_academy_government">https://s3.amazonaws.com/urbanassembly/schools/Government-and-Law.jpg</string>
 </resources>
